--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,7 +4,8 @@ server {
        listen [::]:80;
 
 	server_name _;
-
+	access_log /home/box/web/etc/access.log;
+	error_log /home/box/web/etc/error.log;
        root /home/box/web/ask;
       # index index.html;
 
